k8s/mysql-test.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-basic
  name: mysql-kb
  labels:
    app: mysqlapp
spec:
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
    
  selector:
    app: mysqlapp




---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  name: mysql-kb
  labels:
    app: mysqlapp
spec:
  selector:
    matchLabels:
      app: mysqlapp
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysqlapp
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
      #   volumeMounts:
      #   - name: mysql-volume
      #     mountPath: /data/db
      # volumes:
      # - name: mysql-volume
      #   hostPath:
      #     path: /data/db
      #     type: DirectoryOrCreate
