k8s/php-test.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-basic
  name: php-mysql
  labels:
    app: phpapp
spec:
  # type: NodePort
  ports:
    - port: 80
      targetPort: 80
  
  selector:
    app: phpapp
    
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  name: php-mysql
  labels:
    app: phpapp
spec:
  selector:
    matchLabels:
      app: phpapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpapp
      
    spec:
      containers:
      - image: phpmyadmin/phpmyadmin
        name: php-container
        ports:
        - containerPort: 80
