k8s/server-test.yaml

apiVersion: v1
kind: Service
metadata:
  name: nodeservice
  namespace: ingress-basic
spec:
  type: ClusterIP
  selector:
    app: nodeapp
  ports:
  - port: 5000
    targetPort: 5000


---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  name: node-mysql
  labels:
    app: nodeapp
spec:
  selector:
    matchLabels:
      app: nodeapp

  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodeapp

    spec:
      containers:
      - image: dejitoye/react-api:latest
        name: node-container
        ports:
        - containerPort: 5000
