k8s/ingress-azure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: view
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  # - host: todo.com
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: nodeservice
            port:
              number: 80
